Chande CRUD and ORM, added sql script.

--- a/Students/Students.csproj
+++ b/Students/Students.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CRUD\CRUD.csproj" />
+    <ProjectReference Include="..\ORM\ORM.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Reports\" />
+  </ItemGroup>
+
 </Project>
