Change CRUD, ORM, added new table: SessionEducationalSubject and Creator for him. Chenge WorkWithCrud. Added Reports.

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Students\Students.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Interop.Microsoft.Office.Interop.Excel">
+      <HintPath>..\Students\obj\Debug\netcoreapp3.1\Interop.Microsoft.Office.Interop.Excel.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
