Chenge sql sript added interfaces.

--- a/Students/Students.csproj
+++ b/Students/Students.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\ORM\ORM.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
